--- a/llamadaAJAXBBDD.html
+++ b/llamadaAJAXBBDD.html
@@ -1,28 +1,5 @@
 <body>
-    <button id="boton">Cargar sitio</button>
-    <div id="response">
-
-    </div>
-    <script>
-        function AJAX() {
-            const http = new XMLHttpRequest();
-            const url = 'conexionBBDD.php';
-
-            http.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    document.getElementById("response").innerHTML = this.responseText;
-                    console.log('Response: ', JSON.parse(this.responseText));
-                }
-            }
-
-
-
-            http.open("GET", url);
-            http.send();
-        }
-
-        document.getElementById("boton").addEventListener("click", function() {
-            AJAX();
-        })
-    </script>
+    <div id="response"></div>
+    <script type="module" src="llamadaPHP.js"></script>
+    <script type="module" src="calcularPHI.js"></script>
 </body>
