Modelo MVC corriendo

--- a/llamadaAJAXBBDD.html
+++ b/llamadaAJAXBBDD.html
@@ -1,5 +1,5 @@
 <body>
     <div id="response"></div>
-    <script type="module" src="llamadaPHP.js"></script>
-    <script type="module" src="calcularPHI.js"></script>
+    <!-- <script type="module" src="llamadaPHP.js"></script> Llamada al archivo JavaScript que se conceta al back -->
+    <script type="module" src="calcularPhi.js"></script>
 </body>
