<refactor> funcionaliad tabs

--- a/front/index.html
+++ b/front/index.html
@@ -13,9 +13,21 @@
     <div id="allContainer">
 
         <header>
-            <label for="tab1">Inicio</label>
-            <label for="tab2">Two</label>
-            <label for="tab3">Three</label>
+
+            <label for="tab1" class="tabContainer">
+                <img src="img/iconFb.png" alt="">
+                <label for="tab1"> Inicio </label>
+            </label>
+            <label for="tab2" class="tabContainer">
+                <img src="img/iconFb.png" alt="">
+                <label for="tab2"> Diario </label>
+            </label>
+            <label for="tab3" class="tabContainer">
+                <img src="img/iconFb.png" alt="">
+                <label for="tab3"> Inicio</label>
+            </label>
+
+
         </header>
 
 
@@ -28,7 +40,6 @@
             <input type="radio" id="tab2" class="tabTrigger" name="tab" />
             <div class="tabContent">
                 <table>
-
                 </table>
             </div>
             <input type="radio" id="tab3" class="tabTrigger" name="tab" />
@@ -46,7 +57,6 @@
                         <li> <a href=""> Información casi legal </a></li>
                     </ul>
                 </div>
-                <span class="fill-space"></span>
                 <div id="socialMedia">
                     <img src="Img/iconFb.png" alt="hola" class="socialMedia">
                     <img src="Img/iconFb.png" alt="" class="socialMedia">
