--- a/front2/pages/phi.html
+++ b/front2/pages/phi.html
@@ -13,9 +13,9 @@
     <div class="header">
         <img src="../Img/logo.png" alt="" />
         <div class="header-right">
-            <a class="active" href="index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="diario.html">Diario</a>
-            <a href="phi.html">Phi</a>
+            <a class="active" href="phi.html">Phi</a>
         </div>
     </div>
 
