--- a/llamadaAJAXBBDD.html
+++ b/llamadaAJAXBBDD.html
@@ -1,8 +1,8 @@
 <body>
     <div id="response"></div>
     <!-- <script type="module" src="back/llamadaPHP.js"></script> Llamada al archivo JavaScript que se conceta al back -->
-    <script type="module" src="clasesJavaScript/calcularPhi.js"></script>
+    <!-- <script type="module" src="clasesJavaScript/calcularPhi.js"></script>
     <script type="module" src="clasesJavaScript/registro.js"></script>
     <script type="module" src="clasesJavaScript/diario.js"></script>
-    <script type="module" src="clasesJavaScript/tabla.js"></script>
+    <script type="module" src="clasesJavaScript/tabla.js"></script> -->
 </body>
