--- a/front2/pages/diario.html
+++ b/front2/pages/diario.html
@@ -21,6 +21,22 @@
 
     <br>
     <section>
+        <div class="grid-container">
+            <!-- <div class="grid-item">
+                <h1>DIARIO</h1>
+            </div>
+            <div class="grid-item">
+                <img src="../Img/logo.png">
+            </div>
+            <div class="grid-item">
+                <h1>MARIANO</h1>
+            </div> -->
+            <div class="grid-item">
+                <div class="flex-continer" style="display: flex; align-items: center;">
+                    flecha
+                </div>
+            </div>
+        </div>
         <div class="flex-container" style="display: flex; justify-content: center;">
         <table>
             <tr>
