--- a/front2/pages/diario.html
+++ b/front2/pages/diario.html
@@ -20,7 +20,8 @@
     </div>
 
     <br>
-    <section>
+    <div class="flex-container" style="display: flex; justify-content: center; padding-left: 10%;">
+
         <div class="grid-container">
             <!-- <div class="grid-item">
                 <h1>DIARIO</h1>
@@ -31,12 +32,14 @@
             <div class="grid-item">
                 <h1>MARIANO</h1>
             </div> -->
-            <div class="grid-item">
-                <div class="flex-continer" style="display: flex; align-items: center;">
-                    flecha
-                </div>
+            <div class="grid-container">
+                <div class="grid-item">PULPO</div>
+                <div class="grid-item"><img src="../Img/logo.jpg" style="max-width: 250px;"></div>
+                <div class="grid-item">MARIANO</div>
             </div>
         </div>
+    </div>
+    <section>
         <div class="flex-container" style="display: flex; justify-content: center;">
         <table>
             <tr>
