Sacados todos los elementos del diario

--- a/front2/pages/phi.html
+++ b/front2/pages/phi.html
@@ -20,7 +20,9 @@
     </div>
 
     <section>
-        // todo code here
+        <div style="text-align: center;">
+                <script src="../../componentes/grafica.js"></script>
+            </div>
     </section>
 
     <footer>
