Falta por comunicar eventos

--- a/front2/pages/phi.html
+++ b/front2/pages/phi.html
@@ -20,9 +20,8 @@
     </div>
 
     <section>
-        <div style="text-align: center;">
-                <script src="../../componentes/grafica.js"></script>
-            </div>
+        <!-- <script src="../../componentes/grafica.js"></script> -->
+        <script src="../../clasesJavaScript/calcularPhi.js"></script>
     </section>
 
     <footer>
